--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Karla Lopez</h1>
-								<p>Welcom to my portfolio! Explore my projects and learn about my journey in tech and AI.</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Welcome to my portfolio! I'm a Mathematics Teacher and a double bachelor's student in Data Analytics and Applied Artificial Intelligence.</a> Explore/>
+								my projects and discover my journey as I blend data-driven insights with educational impact.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#projects">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
