--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Karla Lopez</h1>
-								<p>Welcome to my portfolio! I'm a Mathematics Teacher and a double bachelor's student in Data Analytics and Applied Artificial Intelligence.</a> Explore/>
-								my projects and discover my journey as I blend data-driven insights with educational impact.</p>
+								<p>Welcome to my portfolio! I'm a Mathematics Teacher and a double bachelor's student in Data Analytics and Applied Artificial Intelligence.</a> Explore
+								my projects and follow my journey into the world of data and Artificial Intelligence.</p>
 							</div>
 						</div>
 						<nav>
