--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>With over 13 years of experience in the public school system as a teacher, I've witnessed firsthand the transformative power of understanding student data. This insight enabled me to create targeted tutoring sessions, develop differentiated instruction, and design bellringers that address each student's unique learning gaps. Recognizing the potential of data to enhance educational outcomes, I was inspired to deepen my knowledge by pursuing a double bachelor's in Data Analytics and Applied Artificial Intelligence.</p>
+								<p>Driven by a passion for uncovering insights that drive meaningful change, my journey into the world of data focuses on leveraging analytics and AI to make learning more impactful and personalized. Through my projects, I aim to explore the ways data and AI can transform education and empower students.</p>
+								<p>Outside of teaching and studying, I'm continually exploring the latest AI techniques, analyzing trends, and finding creative ways to bring data to life. This portfolio is a testament to my journey so far, and I hope you enjoy exploring the <a href="#projects">Projects</a> that reflect my passion and purpose.</p>
 							</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+							<article id="projects">
+								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
