--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>With over 13 years of experience in the public school system as a teacher, I've witnessed firsthand the transformative power of understanding student data. This insight enabled me to create targeted tutoring sessions, develop differentiated instruction, and design bellringers that address each student's unique learning gaps. Recognizing the potential of data to enhance educational outcomes, I was inspired to deepen my knowledge by pursuing a double bachelor's in Data Analytics and Applied Artificial Intelligence.</p>
-								<p>Driven by a passion for uncovering insights that drive meaningful change, my journey into the world of data focuses on leveraging analytics and AI to make learning more impactful and personalized. Through my projects, I aim to explore the ways data and AI can transform education and empower students.</p>
-								<p>Outside of teaching and studying, I'm continually exploring the latest AI techniques, analyzing trends, and finding creative ways to bring data to life. This portfolio is a testament to my journey so far, and I hope you enjoy exploring the <a href="#projects">Projects</a> that reflect my passion and purpose.</p>
+								<p>This portfolio highlights my journey into the world of data and AI, showcasing projects I've completed during my associate's and bachelor's programs in Applied Artificial Intelligence and Data Analytics. I am passionate about exploring the latest AI techniques, analyzing trends, and creatively bringing data to life.</p>
+								<p>These <a href="#projects">Projects</a> demonstrate my growth and dedication, and I look forward to continuing to enhance my skills. Thank you for exploring my work!</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
