--- a/index.html
+++ b/index.html
@@ -55,15 +55,27 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<div class="project">
+        								<h3>Project Title 1</h3>
+        								<p>Description of the project, highlighting the problem it solves, the technologies used, and your role in it. <a href="LINK_TO_PROJECT_1" target="_blank">View Project</a></p>
+    								</div>
+    								<div class="project">
+        								<h3>Project Title 2</h3>
+        								<p>Description of the project, highlighting the problem it solves, the technologies used, and your role in it. <a href="LINK_TO_PROJECT_2" target="_blank">View Project</a></p>
+    								</div>
+    								<!-- Add more projects as needed -->
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+							<article id="achievements">
+								<h2 class="major">Achievements</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<ul>
+									<li><strong>Award/Certification 1</strong>: Description of the achievement and its relevance to your journey.</li>
+        								<li><strong>Award/Certification 2</strong>: Brief description of what this accomplishment signifies.</li>
+        								<li><strong>Notable Milestone 3</strong>: Another achievement or milestone in your studies or career.</li>
+        								<!-- Add more achievements as needed -->
+								</ul>
 							</article>
 
 						<!-- Contact -->
@@ -77,7 +89,7 @@
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="email" name="email" id="email" value="Kalopez0621@gmail.com" readonly />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
@@ -90,10 +102,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/kalopez0621/Portfolio" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+        								<li><a href="https://www.linkedin.com/in/karla-lopez-41a675281" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+        								<li><a href="https://www.facebook.com/profile.php?id=100001058451862&mibextid=LQQJ4d" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+        								<li><a href="https://www.instagram.com/kalopez0621/profilecard/?igsh=MWQ1ZGUxMzBkMA==" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 
