--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
+							<article id="intro" style="max-width: 800px; margin: 0 auto; text-align: center;">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>This portfolio highlights my journey into the world of data and AI, showcasing projects I've completed during my associate's and bachelor's programs in Applied Artificial Intelligence and Data Analytics. I am passionate about exploring the latest AI techniques, analyzing trends, and creatively bringing data to life.</p>
@@ -52,7 +52,7 @@
 							</article>
 
 						<!-- Projects -->
-							<article id="projects">
+							<article id="projects" style="max-width: 800px; margin: 0 auto; text-align: center;">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<div class="project">
@@ -67,7 +67,7 @@
 							</article>
 
 						<!-- About -->
-							<article id="achievements">
+							<article id="achievements"style="max-width: 800px; margin: 0 auto; text-align: center;">
 								<h2 class="major">Achievements</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<ul>
@@ -79,7 +79,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<article id="contact" style="max-width: 800px; margin: 0 auto; text-align: center;">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
