--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="email" name="email" id="email" value="Kalopez0621@gmail.com" readonly />
+											<input type="email" name="email" id="email" />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
