--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+        		/* Ensure all sections are aligned in the same way */
+        		#intro, #projects, #achievements, #contact {
+            			max-width: 800px; /* Adjust this width if needed */
+            			margin: 0 auto;
+            			text-align: center;
+        		}
+    		</style>
 	</head>
 	<body class="is-preload">
 
@@ -44,7 +52,7 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro" style="max-width: 800px; margin: 0 auto; text-align: center;">
+							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>This portfolio highlights my journey into the world of data and AI, showcasing projects I've completed during my associate's and bachelor's programs in Applied Artificial Intelligence and Data Analytics. I am passionate about exploring the latest AI techniques, analyzing trends, and creatively bringing data to life.</p>
@@ -52,7 +60,7 @@
 							</article>
 
 						<!-- Projects -->
-							<article id="projects" style="max-width: 800px; margin: 0 auto; text-align: center;">
+							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<div class="project">
@@ -67,7 +75,7 @@
 							</article>
 
 						<!-- About -->
-							<article id="achievements"style="max-width: 800px; margin: 0 auto; text-align: center;">
+							<article id="achievements">
 								<h2 class="major">Achievements</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<ul>
@@ -79,7 +87,7 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact" style="max-width: 800px; margin: 0 auto; text-align: center;">
+							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
