--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
         		/* Ensure all sections are aligned in the same way */
-        		#intro, #projects, #achievements, #contact {
+        		#intro, #projects, #certifications, #contact {
             			max-width: 1500px; /* Adjust this width if needed */
             			margin: 0 auto;
             			text-align: center;
@@ -41,7 +41,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#achievements">Achievements</a></li>
+								<li><a href="#certifications">Achievements</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -75,8 +75,8 @@
 							</article>
 
 						<!-- About -->
-							<article id="achievements">
-								<h2 class="major">Achievements</h2>
+							<article id="certifications">
+								<h2 class="major">Certifications</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<ul>
 									<li><strong>Award/Certification 1</strong>: Description of the achievement and its relevance to your journey.</li>
