--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#certifications">Achievements</a></li>
+								<li><a href="#certifications">Certifications</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
