--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
         		/* Ensure all sections are aligned in the same way */
-        		#intro, #projects, #certifications, #contact {
+        		#intro, #projects, #milestones, #contact {
             			max-width: 1500px; /* Adjust this width if needed */
             			margin: 0 auto;
             			text-align: center;
@@ -41,7 +41,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#projects">Projects</a></li>
-								<li><a href="#certifications">  Certifications</a></li>
+								<li><a href="#milestones">Milestones</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -75,8 +75,8 @@
 							</article>
 
 						<!-- About -->
-							<article id="certifications">
-								<h2 class="major">Certifications</h2>
+							<article id="milestones">
+								<h2 class="major">milestones</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<ul>
 									<li><strong>Award/Certification 1</strong>: Description of the achievement and its relevance to your journey.</li>
@@ -84,6 +84,17 @@
         								<li><strong>Notable Milestone 3</strong>: Another achievement or milestone in your studies or career.</li>
         								<!-- Add more achievements as needed -->
 								</ul>
+								<h3>Certifications</h3>
+    								<p>Here are some certifications I’ve earned to enhance my skills and expertise.</p>
+
+    								<!-- Credly Badge 1 -->
+    								<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0b603dd5-488d-4032-873d-197d0a8915de" data-share-badge-host="https://www.credly.com"></div>
+
+    								<!-- Credly Badge 2 -->
+    								<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="7f0d259e-4aa1-4dc1-a58a-c9f7276afb45" data-share-badge-host="https://www.credly.com"></div>
+
+    								<!-- Embed script (only add this once for all badges) -->
+    								<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 							</article>
 
 						<!-- Contact -->
