--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>I am Karla Lopez</strong>,a Mathematics teacher and data enthusiast,<br />
+					passionate about using data analytics and artificial intelligence <br />
+					to drive impactful change in education.</h1>
 				</div>
 			</header>
 
@@ -29,10 +29,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>My Journey</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Driven by a deep interest in data analytics and artificial intelligence, I am on a mission to harness the power of data to make a meaningful impact in education. My journey began with a desire to better understand how data can drive personalized learning and bridge gaps in student achievement. Currently pursuing a double bachelor’s in Data Analytics and Applied AI, I am continually building skills and insights that empower innovative solutions. Each project represents a step toward transforming education through data-driven insights and AI-driven tools.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -81,7 +80,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>I’d love to connect! Whether you're interested in collaborating on data-driven projects, discussing innovative approaches in AI, or exploring opportunities together, feel free to reach out. Let’s work together to drive meaningful impact through data and technology.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -99,17 +98,12 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										Miami, FL <br />
 										United States
 									</li>
 									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">Kalopez0621@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -187,13 +181,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h5>Icons</h5>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-									</ul>
+        									<li><a href="https://github.com/kalopez0621/Portfolio" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+        									<li><a href="https://www.linkedin.com/in/karla-lopez-41a675281" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+        									<li><a href="https://www.facebook.com/profile.php?id=100001058451862&mibextid=LQQJ4d" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+        									<li><a href="https://www.instagram.com/kalopez0621/profilecard/?igsh=MWQ1ZGUxMzBkMA==" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+    									</ul>
 								</div>
 							</div>
 							<h5>Actions</h5>
@@ -440,14 +432,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+            					<li><a href="https://github.com/kalopez0621/Portfolio" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+            					<li><a href="https://www.linkedin.com/in/karla-lopez-41a675281" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+            					<li><a href="https://www.facebook.com/profile.php?id=100001058451862&mibextid=LQQJ4d" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+            					<li><a href="https://www.instagram.com/kalopez0621/profilecard/?igsh=MWQ1ZGUxMzBkMA==" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+            					<li><a href="mailto:Kalopez0621@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+        				</ul>
+					
 				</div>
 			</footer>
 
