--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/selfPicture.jpg" alt="Profile Picture" /></a>
 					<h1><strong>I am Karla Lopez</strong>,a Mathematics teacher and data enthusiast,<br />
 					passionate about using data analytics and artificial intelligence <br />
 					to drive impactful change in education.</h1>
