--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/kalopez0621/Portfolio" target="_blank" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
