--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Fake News Detection with NLP</h3>
+								<p>Leveraging a structured NLP pipeline, this project builds a classifier to effectively distinguish between fake and real news articles, employing TF-IDF vectorization and evaluating three classifiers: Logistic Regression, SVM, and XGBoost.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
