--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/selfPicture.jpg" alt="Profile Picture" /></a>
-					<h1><strong>I am Karla Lopez</strong>,a Mathematics teacher and data enthusiast,<br />
-					passionate about using data analytics and artificial intelligence <br />
-					to drive impactful change in education.</h1>
+					<h1>I am <strong>Karla Lopez</strong>, a Mathematics teacher and data enthusiast, passionate about using data analytics and artificial intelligence to drive impactful change in education.</h1>
 				</div>
 			</header>
 
@@ -42,9 +40,9 @@
 						<h2>Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/fakenewsimage.jpg" class="image fit thumb"><img src="images/thumbs/fakenewsimage.jpg" alt="Fake News Detection Project Image" /></a>
 								<h3>Fake News Detection with NLP</h3>
-								<p>Leveraging a structured NLP pipeline, this project builds a classifier to effectively distinguish between fake and real news articles, employing TF-IDF vectorization and evaluating three classifiers: Logistic Regression, SVM, and XGBoost.</p>
+								<p>Applying TF-IDF vectorization and machine learning techniques to build an end-to-end solution for fake news detection with models like Logistic Regression, SVM, and XGBoost.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
